apps/blog/dev/pg-db-in-k8/pg-deployment.yaml
# pg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: dwp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "bloguser", "-d", "blogdb"]
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: pg-storage
          persistentVolumeClaim:
            claimName: pg-pvc
