apps/blog/dev/pg-db-in-k8/frontend-to-backend-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
  namespace: dwp-dev
spec:
  podSelector:
    matchLabels:
      app: blog-backend
  policyTypes:
  - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: blog-frontend
      ports:
        - protocol: TCP
          port: 9090
